--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Multiplication Table</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.js"></script>
 </head>
 <body>
+	<table ng-controller="MultiplicationCtrl as vm">
+		<tr ng-repeat="numberA in vm.numbers">
+			<td ng-repeat="numberB in vm.numbers">
+				{{ numberA * numberB }}
+			</td>
+		</tr>
+	</table>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.js"></script>
-<script src="js/app.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
