--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Multiplication Table</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.js"></script>
 </head>
 <body>
-	<table ng-controller="MultiplicationCtrl as vm">
-		<tr ng-repeat="numberA in vm.numbers">
-			<td ng-repeat="numberB in vm.numbers">
-				{{ numberA * numberB }}
+<div ng-controller="MultiplicationCtrl as vm" initial-number-limit="10">
+<input type="number" ng-model="vm.numberLimit" placeholder="Enter a number">
+	<table>
+		<tr ng-repeat="numberA in vm.numbers()">
+			<td ng-repeat="numberB in vm.numbers()">
+				{{ vm.compute(numberA, numberB) }}
 			</td>
 		</tr>
 	</table>
-
+</div>
 <script src="app.js"></script>
 </body>
 </html>
